<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <string name="app_name">ラジコンシェルジュ</string>
    
    <!-- Main画面 -->
    <string name="launching_app">起動中です&#8230;</string>
    <string name="dropdown_list_recommend">今週のおすすめ</string>
    <string name="dropdown_list_app_c_advertisement">おすすめアプリ(AD)</string>    
    <string name="program_viewer_switch_homepage">番組サイト</string>
    <string name="program_viewer_switch_info">番組紹介</string>
    <string name="program_viewer_switch_onair">onAir曲</string>
    <string name="program_viewer_switch_loading">onAir曲情報をdownload中&#8230;</string>
    <string name="program_viewer_onair_song_reload">今すぐ更新</string>
    <string name="program_viewer_onair_song_search_youtube">Youtubeを検索</string>
    <string name="program_viewer_onair_song_search_web">Googleを検索</string>
    <string name="program_viewer_onair_song_search_info">%sの最新のonAir曲（tapで検索）</string>
    <string name="program_viewer_onair_song_search_no_info">%sは直近のonAir曲情報を提供していないようです</string>
    <string name="program_viewer_onair_song_search_no_info_for_recommend">この機能は各ラジオ局の番組表を開いている時に有効です。</string>    
    <string name="program_viewer_onair_song_search_error">取得中にエラーが発生しました。更新ボタンを押してリトライください。(code:%d)</string>
    <string name="option_update_now">番組表を再取得</string>
    <string name="option_settings">設定</string>
    <string name="option_launch_radio_app">聴取アプリを起動</string>
    <string name="option_check_update_date">番組更新日時の確認</string>
    <string name="option_about_app">このアプリについて</string>
    <string name="option_rate_app">このアプリを評価</string>
    <string name="option_appc_advertisement">おすすめアプリ情報</string>    
    <string name="program_list_no_data">番組情報がありません</string>
    <string name="data_loading">番組表を取得しています</string>
    <string name="data_loading_progress">今週の番組表を取得しています\n(%1$d件のラジオ局のうち、%2$d件取得完了)</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="ok">OK</string>
    <string name="ask_if_to_update_data_title">番組データの取得</string>
    <string name="ask_if_to_update_data_message">番組データの取得を行います。この処理には時間がかかります。取得を行いますか？</string>
    <string name="notify_load_continue_background">番組データ取得は、アプリを閉じてもバックグラウンドで行われます</string>    
    <string name="notify_settings_changed_title">設定が変更されました</string>
    <string name="notify_settings_changed_message">
        	エリア情報/おまかせキーワードが変更されました。
        	番組表を更新する必要があります。時間がかかる場合がありますが、続行しますか？</string>
    <string name="update_status_dialog_title">番組更新日時</string>
    <string name="update_status_dialog_last_update">最終番組更新\nMM月 dd日 (EEE) HH:mm</string>
    <string name="update_status_dialog_next_update">次の自動番組更新\nMM月 dd日 (EEE) HH:mm</string>
    <string name="program_has_no_website">この番組にはホームページがありません。</string>
    <string name="no_area_dialog_title">エリアを設定してください</string>
    <string name="no_area_dialog_message">設定の「エリア設定」より、聴取エリアを設定してください。</string>       
    
    <!-- 通知系 -->
	<string name="progress_notification_title">ラジコンシェルジュ 番組表更新</string>
	<string name="progress_notification_text">ラジオ局一覧を取得集</string>	
	<string name="progress_notification_text_progress">%1$dつのラジオ局のうち%2$d局取得済み</string>
	<string name="progress_notification_ticker">ラジコンシェルジュ - 番組表更新</string>
	<string name="progress_notification_ticker_complete">ラジコンシェルジュの番組表更新完了</string>
	<string name="progress_notification_text_complete">ラジコンシェルジュの番組表更新完了</string>
	<string name="progress_notification_ticker_failed">ラジコンシェルジュが番組表更新に失敗しました</string>
	<string name="progress_notification_text_failed">ラジコンシェルジュが番組表更新に失敗しました</string>	
	<string name="recommend_reminder_ticker">まもなくオススメのラジオ番組が始まります</string>
	<string name="recommend_reminder_text">%s からonAir</string>
	<string name="recommend_reminder_more">他 %d件</string>
    
    <!-- Settings関連 -->
    <string name="settings_header_area_title">エリア設定</string>
    <string name="settings_header_prefecture_category">県単位で設定</string>
    <string name="settings_header_region_category">地域単位で設定</string>    
    <string name="settings_header_area_summary">番組情報を収集する地域を設定します。</string>
    <string name="settings_header_keyword_title">おまかせキーワード設定</string>
    <string name="settings_header_keyword_summary">オススメ番組を検索するためのキーワードを設定します。</string>
    <string name="settings_header_remindtiming_title">リマインド設定</string>
    <string name="settings_header_remindtiming_summary">オススメ番組のリマインダーの設定をします。</string>
    <string name="settings_remindtiming_title">onAirのどのくらい前にお知らせしますか？</string>
    <string name="settings_remindtiming_not_set">お知らせ不要</string>    
    <string name="settings_remindtiming_ten_min_before">10分前</string>    
    <string name="settings_remindtiming_thirty_min_before">30分前</string>
    <string name="settings_remindtiming_one_hour_before">1時間前</string>
    <string name="settings_remindtiming_two_hour_before">2時間前</string>
    <string name="settings_remindtiming_five_hour_before">5時間前</string>
    <string name="settings_remind_behavior_settings">お知らせの際の動作を選んでください。</string>
    <string name="settings_remind_behavior_light">ランプ点滅</string>
    <string name="settings_remind_behavior_sound">通知音</string>
    <string name="settings_remind_behavior_vibration">バイブレーション</string>
    <string name="settings_keyword_unset">未登録</string>
    <string name="settings_keyword_slot">キーワード %d</string>
    <string name="settings_search_target_settings_title">onAir曲の検索設定</string>
    <string name="settings_search_target_settings_summary">onAir曲をtapした際の検索対象を設定します。</string>
    <string name="settings_search_target_settings_youtube">Youtubeを検索</string>
    <string name="settings_search_target_settings_google">Googleを検索</string>    
    <string name="settings_keep_station_focus_settings_title">最後に見た局を記憶する</string>
    <string name="settings_keep_station_focus_settings_summary">次回起動時に、最後に見た局から起動します</string>
    <string name="settings_keep_station_focus_keep">記憶する</string>
    <string name="settings_keep_station_focus_notkeep">記憶しない（起動時にオススメ番組を表示）</string>
    <string name="settings_browser_cache_settings_title">番組サイトのキャッシュ設定</string>
    <string name="settings_browser_cache_settings_summary">
        番組サイトのキャッシュをOffにすることで、容量が節約できます。この設定はラジコンシェルジュにのみ有効です。</string>
    <string name="settings_browser_cache_settings_enable">Cacheを有効にする</string>
    <string name="settings_browser_cache_settings_disable">Cacheを無効にする</string>
    <string name="settings_menu_help">設定ガイド</string>
    <string name="settings_manual_title">設定ガイド</string>
    <string name="settings_manual">
ラジコンシェルジュは、Radiko.jpの週間番組表が更新される月曜早朝に、backgroundで１週間分の番組表をダウンロードします
（エリア設定に東京を選んだ場合、通信量は大体3～4MBです）。ご利用時には、設定からいくつか情報を入力していただく必要が
あります。\n\n

◆ エリア設定\n
受信エリアを選択してください。ラジコンシェルジュは、選択いただいたエリア内で受信できるラジオ局を対象に、
１週間分の番組表のダウンロードおよびオススメ番組の検索を行います。\n\n
複数選択も可能ですので、Radiko以外のより広い地域のラジオ局を受信できるサービスをご利用の方は、
日本全国を選択いただくと、例えば「好きなアーティストが、新譜リリース直後に地方のラジオ局にゲスト出演」といった場合も
ラジコンシェルジュがアナタにお知らせを出してくれるかもしれません。
\n\n
◆ おまかせキーワード設定\n
全角、半角、大文字、小文字は、なるべく正確に入力いただくと、より確実にオススメ番組がご案内できます。
    </string>
    
    <!-- 日付・時刻系 -->
    <string name="date_yymmdd">yyyy年 MM月 dd日</string>
    <string name="date_mmddeee">MM月 dd日 (EEE)</string>
    <string name="date_mmddeeehhmm">MM月 dd日 (EEE) HH:mm</string>
    <string name="date_switcher_recommend_begin">MM月 dd日 (EEE) から</string>    
    <string name="date_switcher_recommend_end">MM月 dd日 (EEE) のオススメ</string>
    <string name="onair_start_time">HH:mm</string>
    <string name="onair_end_time">- HH:mm</string>
    <string name="onair_date">MM/dd\n(EEE)</string>
    
    <!-- Areaの名称 -->
    <string name="area_hokkaido">北海道</string>
	<string name="area_aomori">青森県</string>
	<string name="area_iwate">岩手県</string>
	<string name="area_miyagi">宮城県</string>
	<string name="area_akita">秋田県</string>
	<string name="area_yamagata">山形県</string>
	<string name="area_fukushima">福島県</string>
	<string name="area_ibaraki">茨城県</string>
	<string name="area_tochigi">栃木県</string>
	<string name="area_gunma">群馬県</string>
	<string name="area_saitama">埼玉県</string>
	<string name="area_chiba">千葉県</string>
	<string name="area_tokyo">東京都</string>
	<string name="area_kanagawa">神奈川県</string>
	<string name="area_niigata">新潟県</string>
	<string name="area_toyama">富山県</string>
	<string name="area_ishikawa">石川県</string>
	<string name="area_fukui">福井県</string>
	<string name="area_yamanashi">山梨県</string>
	<string name="area_nagano">長野県</string>
	<string name="area_gifu">岐阜県</string>
	<string name="area_shizuoka">静岡県</string>
	<string name="area_aichi">愛知県</string>
	<string name="area_mie">三重県</string>
	<string name="area_shiga">滋賀県</string>
	<string name="area_kyoto">京都府</string>
	<string name="area_osaka">大阪府</string>
	<string name="area_hyogo">兵庫県</string>
	<string name="area_nara">奈良県</string>
	<string name="area_wakayama">和歌山県</string>
	<string name="area_tottori">鳥取県</string>
	<string name="area_shimane">島根県</string>
	<string name="area_okayama">岡山県</string>
	<string name="area_hiroshima">広島県</string>
	<string name="area_yamaguchi">山口県</string>
	<string name="area_tokushima">徳島県</string>
	<string name="area_kagawa">香川県</string>
	<string name="area_ehime">愛媛県</string>
	<string name="area_kouchi">高知県</string>
	<string name="area_fukuoka">福岡県</string>
	<string name="area_saga">佐賀県</string>
	<string name="area_nagasaki">長崎県</string>
	<string name="area_kumamoto">熊本県</string>
	<string name="area_oita">大分県</string>
	<string name="area_miyazaki">宮崎県</string>
	<string name="area_kagoshima">鹿児島県</string>
	<string name="area_okinawa">沖縄県</string>

	<!-- Region -->
	<string name="region_hokkaido">北海道</string>
	<string name="region_tohoku">東北</string>	
	<string name="region_kanto">関東</string>
	<string name="region_chubu">中部</string>
	<string name="region_kinki">近畿</string>
	<string name="region_chugoku">中国</string>
	<string name="region_shikoku">四国</string>
	<string name="region_kyushuokinawa">九州・沖縄</string>
	
	<!-- About this app -->
    <string name="copyright">Copyright &#169; 2012 tsuyoyo All Rights Reserved.</string>
    <string name="contact_title">製作者に連絡</string>
    <string name="context_subtitle">感想・ご要望・不具合報告など、フィードバックお待ちしています。</string>
    <string name="version_info">Version : %s</string>
    <string name="version_log_title">更新履歴</string>
    
</resources>