<?xml version="1.0" encoding="utf-8"?>
<!-- 
/**
 * Copyright (c) 
 * 2012 Tsuyoyo. All Rights Reserved.
 */
 
// GingerBread上で動作した場合のsetting画面xml。
 
 -->
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
	
	<Preference android:key="area_setting_category_key"
				android:title="@string/settings_header_area_title"
				android:summary="@string/settings_header_area_summary"
				android:showDefault="true" />
	<Preference android:key="recommend_keyword_setting_category_key"
				android:title="@string/settings_header_keyword_title"
				android:summary="@string/settings_header_keyword_summary"
				android:showDefault="true" />
	<Preference android:key="reminder_setting_category_key"
				android:title="@string/settings_header_remindtiming_title"
				android:summary="@string/settings_header_remindtiming_summary"
				android:showDefault="true" />
	<Preference android:key="onair_song_search_target_category_key"
	    		android:title="@string/settings_search_target_settings_title"
				android:summary="@string/settings_search_target_settings_summary"
				android:showDefault="true" />
	<Preference android:key="browser_cache_settings_category_key"
	    		android:title="@string/settings_browser_cache_settings_title"
				android:summary="@string/settings_browser_cache_settings_summary"
				android:showDefault="true" />
<!-- 	
	<Preference android:key="keep_station_focus_target_key"
	    		android:title="@string/settings_keep_station_focus_settings_title"
				android:summary="@string/settings_keep_station_focus_settings_summary"
				android:showDefault="true" />			
 -->
</PreferenceScreen>