<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- エリアの設定 -->
    <header
        android:fragment="tsuyogoro.sugorokuon.settings.fragment.AreaSettingPreferenceFragment"
        android:title="@string/settings_header_area_title" 
        android:summary="@string/settings_header_area_summary" />

    <!-- キーワードの設定 -->
    <header
        android:fragment="tsuyogoro.sugorokuon.settings.fragment.RecommendWordPreferenceFragment"
        android:title="@string/settings_header_keyword_title" 
        android:summary="@string/settings_header_keyword_summary" />
    
    <!-- リマインダの設定 -->
    <header
        android:fragment="tsuyogoro.sugorokuon.settings.fragment.ReminderSettingFragment"
        android:title="@string/settings_header_remindtiming_title" 
        android:summary="@string/settings_header_remindtiming_summary" />    
    
    <!-- onAir曲の検索対象 -->
    <header
        android:fragment="tsuyogoro.sugorokuon.settings.fragment.SearchTargetSettingsFragment"	
        android:title="@string/settings_search_target_settings_title"
        android:summary="@string/settings_search_target_settings_summary"
		/>
    
    <!-- Browserのcache設定 -->
    <header
        android:fragment="tsuyogoro.sugorokuon.settings.fragment.BrowserCacheSettingsPreferenceFragment"	
        android:title="@string/settings_browser_cache_settings_title"
        android:summary="@string/settings_browser_cache_settings_summary"
		/>
      
    <!-- 局のfocusを記憶しておくかどうかの設定 -->
<!-- 
    <header
        android:fragment="tsuyogoro.sugorokuon.settings.fragment.KeepStationFocusPreferenceFragment"	
        android:title="@string/settings_keep_station_focus_settings_title"
        android:summary="@string/settings_keep_station_focus_settings_summary"
		/> 		
 -->    
</preference-headers>
